--- a/services.html
+++ b/services.html
@@ -315,7 +315,7 @@
         <li>Priority access to restocks and limited-batch products</li>
         <li>10% discount on additional à la carte vials</li>
       </ul>
-      <button>Subscribe</button>
+<button onclick="window.location.href='subscribe-basic.html'">Subscribe</button>
     </div>
     <div class="tier">
       <h3>Plus – $129.99/mo</h3>
@@ -326,7 +326,7 @@
         <li>Subscriber-only access to new RUO peptides</li>
         <li>Exclusive educational briefings (e.g., research summaries, etc.)</li>
       </ul>
-      <button>Subscribe</button>
+<button onclick="window.location.href='subscribe-plus.html'">Subscribe</button>
     </div>
     <div class="tier">
       <h3>Pro – $199.99/mo</h3>
@@ -338,7 +338,7 @@
         <li>VIP early access to upcoming molecules (e.g., CJC-1295, Epitalon)</li>
         <li>Dedicated premium support</li>
       </ul>
-      <button>Subscribe</button>
+<button onclick="window.location.href='subscribe-pro.html'">Subscribe</button>
     </div>
   </section>
 
