--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <div class="checkpoint">
     <h1>Age & Use Verification</h1>
     <p>
-      By entering this site, you confirm that you are at least 18 years of age and understand that all products sold by BioDirect Health Club are intended strictly for laboratory research purposes only. These products are not for human consumption, medical, veterinary, or diagnostic use.
+      By entering this site, you confirm that you are at least 18 years of age and understand that all products sold by BioDirect Health Club are intended strictly for laboratory research purposes only. <br><br>These products are not for human consumption, medical, veterinary, or diagnostic use.
     </p>
     <a href="#" class="btn" onclick="verifyAge()">I Acknowledge & Enter</a>
   </div>
